syntax = "proto3";

package user;

option go_package = "./user/pb";


service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc Update(UpdateUserRequest) returns (UpdateUserResponse) {}
}

// Register
message RegisterRequest {
    string email = 1;
    string name = 2;
    string username = 3;
    optional string role = 4;
    optional int32 teamID = 5;
}

message RegisterResponse {
    bool success = 1;
}

// GetUser
message GetUser {
    int32 id = 1;
    string name = 2;
    string email = 3;
    string username = 4;
    string role = 5;
    int32 teamID = 6;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    GetUser data = 1;
}

// UpdateUser
message UpdateUserRequest {
    int32 userID = 1;
    optional string username  = 2;
    optional string password  = 3;
    optional string role = 4;
    optional int32 teamID = 5;
}

message UpdateUserResponse {
    int32 status = 1;
    string error = 2;
}
